fixed overflow being seen

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -60,6 +60,7 @@ color:white;
 
 .third_bar{
    background-color: #f9f9f9;
+   overflow: hidden;
 
 }
 
